# MOC

./: Makefile.am  README.md  configure.ac
include/: Makefile.am  moc.h  moc_common.h
src/: Makefile.am  moc.c
test/: Makefile.am  Makefile.devel  README.md  hello-omp.c  moc_tests.m4  mpi_omp_hello.c  simple_test.c  test-runner  tst-show-affinity.c
test/scripts/: tst-show-affinity.sh
