#
# Copyright 2017        UT-Battelle, LLC
#                       All rights reserved.
#
# See COPYING in top-level directory.
# 
# Additional copyrights may follow
# 
# $HEADER$
#

bin_PROGRAMS =

libmoc_la_SOURCES =     \
        moc.h           \
        moc_common.h

include_HEADERS=moc.h moc_common.h
