#
# Copyright 2017        UT-Battelle, LLC
#                       All rights reserved.
#
# See COPYING in top-level directory.
# 
# Additional copyrights may follow
# 
# $HEADER$
#

bin_PROGRAMS =

COMMON_SOURCES =            \
        moc.c

lib_LTLIBRARIES = libmoc.la
libmoc_la_SOURCES = $(COMMON_SOURCES)
libmoc_la_LIBADD =
